--- a/index.css
+++ b/index.css
@@ -52,12 +52,17 @@ h2 {
     padding-top: 40px;
 }
 
-#btn_login {
+#button_login {
     height: 30px;
     width: 74px;
     font-size: 20px;
     color: white;
     background-color: black;
+}
+
+#button_login a{
+    text-decoration: none;
+    color: white;
 }
 
 #remember_me {
@@ -66,14 +71,14 @@ h2 {
     border: solid 1px black;
 }
 
-.huskmig {
-    color: white;
-    padding-left: 5px;
-}
-
 .box_grid3 {
     display: flex;
     flex-direction: row;
     padding-top: 6px;
     width: 400px;
+}
+
+.huskmig {
+    color: white;
+    padding-left: 5px;
 }
