--- a/registration-1.css
+++ b/registration-1.css
@@ -123,3 +123,17 @@ h2 {
     column-gap: 64px;
     row-gap: 8px;
 }
+
+#next_button {
+    height: 30px;
+    width: 74px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    float: right;
+}
+
+#next_button a {
+    text-decoration: none;
+    color: white;
+}
