--- a/registration.css
+++ b/registration.css
@@ -71,7 +71,7 @@ nav{
     padding: 16px;
 }
 
-.registry1{
+#registry1{
     width: 100%;
     padding-top: 32px;
     background-color: #E4F1F0;
@@ -140,6 +140,104 @@ h2 {
 }
 
 #next_button a {
+    text-decoration: none;
+    color: white;
+}
+
+.registry2{
+    width: 100%;
+    padding-top: 32px;
+    background-color: #E4F1F0;
+}
+
+#section3 {
+    width: 1226px;
+    padding-top: 32px;
+    background-color: #E4F1F0;
+    display: flex;
+    padding-left: 129px;
+}
+
+.gender{
+    height: 58px;
+    padding-right: 129px;
+}
+
+.drop_down2{
+    width: 150px;
+    height: 30px;
+    border: solid 1px black;
+}
+
+.search2{
+    width: 150px;
+    height: 30px;
+    border: solid 1px black;
+}
+
+.inquiry{
+    height: 58px;
+    padding-right: 129px;
+}
+
+.conversation_time{
+    height: 58px;
+}
+
+#section4 {
+    width: 1226px;
+    padding-top: 32px;
+    background-color: #E4F1F0;
+    padding-left: 129px;
+}
+
+.subject_grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-auto-flow: column;
+    column-gap: 64px;
+    row-gap: 8px;
+}
+
+.info {
+    height: 16px;
+    width: 16px;
+}
+
+.buttons_box {
+    width: 100%;
+}
+
+.buttons {
+    float: right;
+width: 398px;
+}
+
+#back_button {
+    height: 30px;
+    width: 74px;
+    font-size: 20px;
+    color: white;
+    background-color: black;
+    margin-right: 130px;
+}
+
+#back_button a {
+    text-decoration: none;
+    color: white;
+}
+
+#registrate {
+    height: 45px;
+    width: 154px;
+    font-size: 20px;
+    color: white;
+    background-color: #22973A;
+    border: none;
+}
+
+#registrate a {
     text-decoration: none;
     color: white;
 }
