--- a/registration.css
+++ b/registration.css
@@ -1,56 +1,7 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: #e4f1f0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-nav{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 60px;
-    background-color: #004953;
-}
-
-#navbar{
-    width: 100%;
-    list-style: none;
-    font-size: 25px;
-    padding-left: 278px;
-    padding-top: 13px;
-}
-
-.navbar_link{
-    float: left;
-}
-
-#navbar a{
-    text-decoration: none;
-    color: white;
-    padding-left: 30px;
-    float: left;
-}
-
-.profil{
-    text-align: right;
-    float: right;
-    padding-left: auto;
-    padding-right: 16px;
-}
-
 #content{
     width: 100%;
     display: flex;
-}
-
-.sidebar{
-    width: 200px;
-    min-height: 869px;
-    background-color: #003B43;
+    justify-content: space-around;
 }
 
 .steps{
@@ -115,19 +66,21 @@ h2 {
 }
 
 #section2 {
-    width: 1226px;
+    max-width: 1226px;
     padding-top: 32px;
     background-color: #E4F1F0;
     padding-left: 129px;
+    
+}
+.flex_box{
+        display:flex;
+    flex-wrap:wrap;
+    flex-direction:row;
 }
 
-.education_grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(16, 1fr);
-    grid-auto-flow: column;
-    column-gap: 64px;
-    row-gap: 8px;
+.grid_item {
+    width:400px;
+    padding-top:13px;
 }
 
 #next_button {
@@ -144,7 +97,7 @@ h2 {
     color: white;
 }
 
-.registry2{
+#registry2{
     width: 100%;
     padding-top: 32px;
     background-color: #E4F1F0;
@@ -163,12 +116,6 @@ h2 {
     padding-right: 129px;
 }
 
-.drop_down2{
-    width: 150px;
-    height: 30px;
-    border: solid 1px black;
-}
-
 .search2{
     width: 150px;
     height: 30px;
@@ -185,19 +132,13 @@ h2 {
 }
 
 #section4 {
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:row;
     width: 1226px;
     padding-top: 32px;
     background-color: #E4F1F0;
     padding-left: 129px;
-}
-
-.subject_grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(7, 1fr);
-    grid-auto-flow: column;
-    column-gap: 64px;
-    row-gap: 8px;
 }
 
 .info {
