--- a/dashboard.css
+++ b/dashboard.css
@@ -1,38 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: #e4f1f0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-nav{
+#content{
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 60px;
-    background-color: #004953;
-}
-
-#navbar{
-    width: 100%;
-    list-style: none;
-    font-size: 25px;
-    padding-left: 278px;
-    padding-top: 13px;
-}
-
-.navbar_link{
-    float: left;
-}
-
-#navbar a{
-    text-decoration: none;
-    color: white;
-    padding-left: 30px;
-    float: left;
 }
 
 .profil{
@@ -54,3 +22,6 @@ nav{
     padding-top: 20px;
 }
 
+#wrapper{
+    width:100%;
+}
