--- a/app.css
+++ b/app.css
@@ -16,8 +16,13 @@ nav{
     background-color: #004953;
 }
 
+#navwrapper{
+    width: 1226px;
+    margin:0 auto;
+}
+
 #navbar{
-    width: 500px;
+    width: 100%;
     list-style: none;
     font-size: 25px;
     margin:0 auto;
@@ -32,7 +37,7 @@ nav{
 #navbar a{
     text-decoration: none;
     color: white;
-    padding-left: 30px;
+    padding-right: 30px;
     float: left;
 }
 
@@ -41,8 +46,7 @@ nav{
     display:flex;
     list-style: none;
     font-size: 25px;
-    padding-left: 278px;
-    padding-top: 13px;
+    float:right;
 }
 
 #userprofil a{
@@ -51,6 +55,16 @@ nav{
 }
 
 .profil{
+    text-align: right;
+    float: right;
+    padding-left: auto;
+    padding-right: 16px;
+    z-index: 999999;
+    border-right:solid 1px black;
+    color:white;
+}
+
+.profil2{
     text-align: right;
     float: right;
     padding-left: auto;
