--- a/admin.css
+++ b/admin.css
@@ -3,6 +3,7 @@
     min-height: 869px;
     background-color: #003B43;
     color: #ffffff;
+    position:absolute;
 }
 
 .adminPad{
@@ -25,7 +26,7 @@
 }
 
 table{
-    width: 900px;
+    width: 1226px;
     text-align: left;
 }
 
